; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/extr_mach_approximate_time.c_mach_approximate_time.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/extr_mach_approximate_time.c_mach_approximate_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_COMM_PAGE_APPROX_TIME_SUPPORTED = common dso_local global i64 0, align 8
@_COMM_PAGE_APPROX_TIME = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mach_approximate_time() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = load i64, i64* @_COMM_PAGE_APPROX_TIME_SUPPORTED, align 8
  %4 = inttoptr i64 %3 to i64*
  %5 = load i64, i64* %4, align 8
  store i64 %5, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %0
  %9 = load i64, i64* @_COMM_PAGE_APPROX_TIME, align 8
  %10 = inttoptr i64 %9 to i32*
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %1, align 4
  br label %14

12:                                               ; preds = %0
  %13 = call i32 (...) @mach_absolute_time()
  store i32 %13, i32* %1, align 4
  br label %14

14:                                               ; preds = %12, %8
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32 @mach_absolute_time(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
